force-app/main/default/objects/SmartIntake_Template__mdt/SmartIntake_Template__mdt.object-meta.xml
<CustomObject>
    <label>SmartIntake Template</label>
    <pluralLabel>SmartIntake Templates</pluralLabel>
</CustomObject>