force-app/main/default/objects/SmartIntake_Template__mdt/fields/Completion_Message__c.field-meta.xml
<CustomField>
    <fullName>Completion_Message__c</fullName>
    <label>Completion Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>