force-app/main/default/objects/SmartIntake_Template__mdt/fields/Requires_Final_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Requires_Final_Confirmation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Requires Final Confirmation</label>
    <type>Checkbox</type>
</CustomField>