force-app/main/default/objects/SmartIntake_Template__mdt/fields/Start_Question_Key__c.field-meta.xml
<CustomField>
    <fullName>Start_Question_Key__c</fullName>
    <label>Start Question Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>