force-app/main/default/objects/SmartIntake_Template__mdt/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>